force-app/main/default/objects/Bill__c/fields/Doctor_bill__c.field-meta.xml
<CustomField>
    <fullName>Doctor_bill__c</fullName>
    <label>Doctor_bill</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>