force-app/main/default/objects/Bill__c/fields/Fee_Concession__c.field-meta.xml
<CustomField>
    <fullName>Fee_Concession__c</fullName>
    <label>Fee Concession</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Wait</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>