force-app/main/default/objects/Bill__c/fields/Lab_bill__c.field-meta.xml
<CustomField>
    <fullName>Lab_bill__c</fullName>
    <label>Lab_bill</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>