force-app/main/default/objects/Bill__c/fields/Total_Bill__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill__c</fullName>
    <formula>Doctor_bill__c  +  Lab_bill__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>